Increased Character Limits for Fields, Removed a Redundant JS File

--- a/SITE/src/main/resources/templates/project_student_management.html
+++ b/SITE/src/main/resources/templates/project_student_management.html
@@ -32,7 +32,7 @@
                 class="logo me-3"
               />
               <h4 class="mb-0 fw-normal text-white m-0">
-                <span class="d-none d-sm-inline">Title: </span>
+                <span class="d-none d-sm-inline"></span>
                 <span
                   th:text="${project.title}"
                   class="fw-semibold ms-1"
